--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.10.0",
+    "axios": "^1.13.2",
     "axios-cache-interceptor": "^1.8.0",
     "chart.js": "^4.5.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "framer-motion": "^12.18.1",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
